# mcp-server-opensearch

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml  smithery.yaml  test_OpenSearchClient.py
src/mcp-server-opensearch/: AsyncOpenSearchClient.py  OpenSearchClient.py  __init__.py  demo.py  server.py  serverTest.py  test_AsyncClient.py  test_opensearch.py
