[project]
name = "mcp-server-opensearch"
version = "0.1.0"
description = "MCP server for OpenSearch"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.44.0",
    "fastmcp>=0.4.1",
    "httpx>=0.28.1",
    "mcp[cli]>=1.2.0",
    "opensearch-py>=2.8.0",
    "python-dotenv>=1.0.1",
]
